Switch widget/canvas' instance, update tab name.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,9 +10,9 @@
 
   <title>{{ escape(handler.settings["mars_title"]) }}</title>
 
-  <link rel="stylesheet" href="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
