To constructe new node type and tree!

--- a/src/static/css/topo.css
+++ b/src/static/css/topo.css
@@ -33,18 +33,44 @@
     cursor: pointer;
 }
 
-
-/*.endpointSourceLabel {
-    background-color: white;
+/*TODO: Z-INDEX!!!*/
+.endpointSourceLabel {
+/*    background-color: white;
     padding: 0.4em;
     font: 48px sans-serif;
     color: #444;
     z-index: 21;
     border: 1px dotted gray;
-    opacity: 0.8;
-    cursor: pointer;
+    opacity: 0.1;
+    cursor: pointer;*/
+    z-index: 3000;
+    /*opacity: 0.3;*/
+
+    max-width: 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
-*/
+
+.endpointTargetLabel {
+/*    background-color: white;
+    padding: 0.4em;
+    font: 48px sans-serif;
+    color: #444;
+    z-index: 21;
+    border: 1px dotted gray;
+    opacity: 0.1;
+    cursor: pointer;*/
+    z-index: 3000;
+    /*opacity: 0.3;*/
+
+    max-width: 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+
 .endpointSourceLabel.jtk-hover {
     background-color: #434343;
     color: white;
@@ -52,6 +78,10 @@
     font: 24px sans-serif;
     z-index: 5000;
     border-radius: 0.3em;
+    opacity: 1;
+
+    max-width: 350px;
+    overflow: visible;
 }
 
 .endpointTargetLabel.jtk-hover {
@@ -61,6 +91,31 @@
     font: 24px sans-serif;
     z-index: 5000;
     border-radius: 0.3em;
+    opacity: 1;
+
+    max-width: 350px;
+    overflow: visible;
+
+}
+
+.connectionLabel {
+    max-width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.connectionLabel.jtk-hover {
+    background-color: #434343;
+    color: white;
+    /*border: 1px solid white;*/
+    font: 16px sans-serif;
+    z-index: 5000;
+    border-radius: 0.3em;
+    opacity: 1;
+
+    max-width: 550px;
+    overflow: visible;
 }
 
 .save-widget {
