--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -159,7 +159,7 @@
 
 
 
-
+<script src="../static/js/nodes.js"></script>
 <script src="../static/js/jsplumb.min.js"></script>
 <script src="../static/js/demo.js"></script>
 <script src="../static/js/topo.js"></script>
