To complete NN.

--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -110,6 +110,31 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h4 class="panel-title">
+				<a data-toggle="collapse" data-parent="#accordion" href="#collapseNN">
+				<h4><strong>Neural Network<div class="tree-head tree-nn"></div></strong></h4>
+				</a>
+			</h4>
+		</div>
+
+		<div id="collapseNN" class="panel-collapse collapse">
+			<div class="panel-body" id="FullConn">
+				Full Connected Layer
+			</div>
+			<div class="panel-body" id="Convolution">
+				Convolution Layer
+			</div>
+			<div class="panel-body" id="Pooling">
+				Pooling layer
+			</div>
+			<div class="panel-body" id="Softmax">
+				Softmax layer
+			</div>
+		</div>
+	</div>
 </div>
 
 {% end %}
