--- a/src/static/css/topo.css
+++ b/src/static/css/topo.css
@@ -203,6 +203,10 @@
     filter: alpha(opacity=50);background-color:rgba(139,69,19,0.8);
 }
 
+.tree-nn {
+    filter: alpha(opacity=50);background-color:rgba(83,83,83,0.8);
+}
+
 .modal-button {
     float:right; 
     display:inline;
