--- a/src/templates/topo.html
+++ b/src/templates/topo.html
@@ -114,24 +114,36 @@
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#collapseNN">
-				<h4><strong>Neural Network<div class="tree-head tree-nn"></div></strong></h4>
+				<a data-toggle="collapse" data-parent="#accordion" href="#collapseKeras">
+				<h4><strong>Keras Neural Network<div class="tree-head tree-kerasnn"></div></strong></h4>
 				</a>
 			</h4>
 		</div>
 
-		<div id="collapseNN" class="panel-collapse collapse">
-			<div class="panel-body" id="FullConn">
-				Full Connected Layer
+		<div id="collapseKeras" class="panel-collapse collapse">
+			<div class="panel-body" id="KerasSequential" draggable="true" ondragend="addNode('Keras', 'Sequential', event)" onclick="showHelp('Keras', 'Sequential')">
+				Keras Sequential
 			</div>
-			<div class="panel-body" id="Convolution">
-				Convolution Layer
+			<div class="panel-body" id="KerasDense" draggable="true" ondragend="addNode('Keras', 'Dense', event)" onclick="showHelp('Keras', 'Dense')">
+				Keras Dense
 			</div>
-			<div class="panel-body" id="Pooling">
-				Pooling layer
+			<div class="panel-body" id="KerasDropout" draggable="true" ondragend="addNode('Keras', 'Conv2D', event)" onclick="showHelp('Keras', 'Conv2D')">
+				Keras Conv2D
 			</div>
-			<div class="panel-body" id="Softmax">
-				Softmax layer
+			<div class="panel-body" id="KerasDropout" draggable="true" ondragend="addNode('Keras', 'Dropout', event)" onclick="showHelp('Keras', 'Dropout')">
+				Keras Dropout
+			</div>
+			<div class="panel-body" id="KerasMaxPooling2D" draggable="true" ondragend="addNode('Keras', 'MaxPooling2D', event)" onclick="showHelp('Keras', 'MaxPooling2D')">
+				Keras MaxPooling2D
+			</div>
+			<div class="panel-body" id="KerasFlatten" draggable="true" ondragend="addNode('Keras', 'Flatten', event)" onclick="showHelp('Keras', 'Flatten')">
+				Keras Flatten
+			</div>
+			<div class="panel-body" id="KerasCompile" draggable="true" ondragend="addNode('Keras', 'Compile', event)" onclick="showHelp('Keras', 'Compile')">
+				Keras Compile
+			</div>
+			<div class="panel-body" id="KerasFit" draggable="true" ondragend="addNode('Keras', 'Fit', event)" onclick="showHelp('Keras', 'Fit')">
+				Keras Fit
 			</div>
 		</div>
 	</div>
