--- a/src/static/css/topo.css
+++ b/src/static/css/topo.css
@@ -152,6 +152,12 @@
     cursor: pointer;
 }
 
+.closeTab {
+    right:0px;
+    top:0px;
+    position:absolute;
+}
+
 .console-part {
     background-color: transparent;
     font-family: Arial,sans-serif;
